--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.31",
+    "lucide-react": "^0.553.0",
     "pdfjs-dist": "^5.4.394",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-router": "^7.9.2",
-    "tailwind-merge": "^3.3.1",
+    "react-router-dom": "^7.9.6",
+    "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
